Hard code Fortran GRIB types so grib_types doesn't need -lc
On Frontier this program gives a segfault when built with
grib_fortran_kinds.c, because doing so requires linking with -lc, which
gives a program that always segfaults for unknown reasons. In the mean
time it's easier just to hard code the output of this program so it
doesn't need the C function at all.

--- a/fortran/CMakeLists.txt
+++ b/fortran/CMakeLists.txt
@@ -9,7 +9,7 @@ if( HAVE_FORTRAN )
 
     ecbuild_add_executable( TARGET  grib_types
                             NOINSTALL
-                            SOURCES grib_types.f90 grib_fortran_kinds.c )
+                            SOURCES grib_types.f90 )
 
     add_custom_command( OUTPUT  grib_kinds.h
                         COMMAND grib_types > grib_kinds.h
